# SpaceCarving

./: CMakeLists.txt  README.md  glad.c  inp2.txt  main.cpp
